repos/emily-python/contents/test/reader/fail/rparen.em
# Rparen with no lparen
# Arg: --ast
# Expect failure

abcd )
